# ssd-metal

./: README.md  pyproject.toml
ssd/: __init__.py  __main__.py  cli.py  config.py  paths.py
ssd/engine/: draft_runner.py  llm_engine.py  model_runner.py  scheduler.py  speculator_unified.py  step.py  verifier.py
ssd/engine/helpers/: cudagraph_helpers.py  mask_helpers.py  runner_helpers.py  speculate_types.py
ssd/kernels/: kvcache_store.py
ssd/layers/: activation.py  attention.py  embed_head.py  layernorm.py  linear.py  rotary_embedding.py  sampler.py
ssd/models/: eagle3_draft_llama3.py  llama3.py  qwen3.py
ssd/utils/: context.py  loader.py  verify.py
ssd/utils/async_helpers/: async_spec_helpers.py
