[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssd"
version = "0.3.0"
authors = [{ name = "Tanishq Kumar" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Async tree-based speculative decoding research engine (Apple Silicon / MLX)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlx>=0.22.0",
    "transformers>=4.45.0",
    "xxhash>=3.5.0",
    "numpy>=2.0.0",
    "safetensors>=0.4.0",
    "tqdm>=4.65.0",
    "tiktoken",
]

[project.optional-dependencies]
scripts = [
    "datasets",
    "huggingface_hub",
]

[project.urls]
Homepage="https://github.com/tanishqkumar/ssd"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssd*"]
